# cirru-edn.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yaml  test.yaml
benches/: parsing.rs
examples/: api_doc_demo.rs  bincode.rs  buffer.rs  error_demo.rs  from.rs  json.rs  main.rs  readme_test.rs  serde.rs  serde_demo.rs  struct_key_demo.rs  test_cirru_serde.rs  test_parse_error.rs
src/: edn.rs  error.rs  from_serde.rs  keyword.rs  lib.rs  main.rs  primes.rs  serde_support.rs  tag.rs  view.rs
src/edn/: any_ref.rs  list.rs  map.rs  record.rs  set.rs  tuple.rs
tests/: any_ref_tests.rs  atom_tests.rs  display_tests.rs  edn_tests.rs  from_to_tests.rs  quote_deserialization_tests.rs  record_deserialization_tests.rs  serde_tests.rs  tuple_tests.rs  version_tests.rs  viewer_tests.rs
