[package]
name = "cirru_edn"
version = "0.5.5"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Parser/Writer for Cirru EDN"
homepage = "http://cirru.org"
documentation = "https://docs.rs/crate/cirru_edn/"
repository = "https://github.com/Cirru/cirru_edn.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.1.x"
# cirru_parser = { path = "../parser.rs" }
hex = "0.4.3"
lazy_static = "1.4.0"
bincode = "2.0.0-rc.3"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "parsing"
harness = false

[profile.release]
debug = true
