[package]
name = "cirru_edn"
version = "0.6.20"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Parser/Writer for Cirru EDN"
homepage = "http://cirru.org"
documentation = "https://docs.rs/crate/cirru_edn/"
repository = "https://github.com/Cirru/cirru_edn.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.1.34"
# cirru_parser = { path = "../parser.rs" }
hex = "0.4.3"
bincode = "2.0.0-rc.3"
cjk = "0.2.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parsing"
harness = false

[profile.release]
debug = true
