[package]
name = "cirru_edn"
version = "0.7.6"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Parser/Writer for Cirru EDN"
homepage = "http://cirru.org"
documentation = "https://docs.rs/crate/cirru_edn/"
repository = "https://github.com/Cirru/cirru_edn.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.2.7"
# cirru_parser = { path = "../parser.rs" }
hex = "0.4.3"
cjk = "0.2.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "parsing"
harness = false

[profile.release]
debug = true
